erDiagram
    documents ||--o{ structural_units : contains
    structural_units ||--o{ structural_units : parent_child
    structural_units ||--o{ definitions : defines
    structural_units ||--o{ applicability_conditions : applies_to
    structural_units ||--o{ cross_references : links
    structural_units ||--o{ compliance_obligations : enforces
    structural_units ||--o{ amendment_history : tracks
    
    documents {
        uuid id PK
        string title
        string document_type
    }
    
    structural_units {
        uuid id PK
        uuid document_id FK
        uuid parent_id FK
        string unit_type
        string full_text
        string[] provision_nature
    }
    
    cross_references {
        uuid id PK
        uuid source_unit_id FK
        uuid target_unit_id FK
        string reference_type
    }
    
    compliance_obligations {
        uuid id PK
        uuid structural_unit_id FK
        string obligation_type
        string penalty_description
    }
